--- a/MSEnterpriseLogging/Tracing.MSEnterpriseLogging.csproj
+++ b/MSEnterpriseLogging/Tracing.MSEnterpriseLogging.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{46BF96BD-440D-4DC4-BF3C-3B9AFA410624}</ProjectGuid>
+    <ProjectGuid>{1F9785AA-C98E-4634-8134-2387D6FC6528}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tracing</RootNamespace>
-    <AssemblyName>Tracing</AssemblyName>
+    <RootNamespace>Tracing.MSEnterpriseLogging</RootNamespace>
+    <AssemblyName>Tracing.MSEnterpriseLogging</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,21 +30,35 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\EnterpriseLibrary.Common.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\EnterpriseLibrary.Logging.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.Logging.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InvokeEngine\EventType.cs" />
-    <Compile Include="InvokeEngine\InvokeWrapperBase.cs" />
-    <Compile Include="InvokeVerbosity.cs" />
-    <Compile Include="SlimTracer.cs" />
-    <Compile Include="TraceException.cs" />
-    <Compile Include="Tracer.cs" />
-    <Compile Include="InvokeEngine\InvokeWrapper.cs" />
-    <Compile Include="Tracer.Invokers.cs" />
-    <Compile Include="InvokeEngine\InvokeWrapperBase.Invokers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TraceScope.cs" />
+    <Compile Include="SlimTracer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tracer\Tracing.csproj">
+      <Project>{46bf96bd-440d-4dc4-bf3c-3b9afa410624}</Project>
+      <Name>Tracing</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
