--- a/SampleTracerApp/App.config
+++ b/SampleTracerApp/App.config
@@ -3,4 +3,55 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+  <configSections>
+    <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
+  </configSections>
+  <loggingConfiguration name="EmployerLogging" tracingEnabled="true" defaultCategory="General">
+    <listeners>
+      <add name="Event Log Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" source="EmployerSite" formatter="Text Formatter" log="Application" machineName="." traceOutputOptions="LogicalOperationStack, DateTime, Timestamp, ProcessId, ThreadId, Callstack" filter="Off" />
+      <add name="Rolling Flat File Trace Listener" formatter="One Liner" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" fileName=".\Logs\EmployerSite.log" header="" footer="" rollFileExistsBehavior="Increment" rollInterval="Week" rollSizeKB="100000" timeStampPattern="yyyy-MM-dd" maxArchivedFiles="52" traceOutputOptions="LogicalOperationStack, DateTime, Timestamp, ThreadId, Callstack" filter="Information"/>
+    </listeners>
+    <formatters>
+      <add template="{timestamp}: {category}: {severity}: {message} {dictionary({key} - {value})}"
+          type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+          name="One Liner" />
+      <add type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" template="{timestamp} {property(ActivityId)} {severity} {eventid} {priority} {category} {localMachine} {localAppDomain} {localProcessId} {localProcessName} {threadName} {win32ThreadId}{newline}&#xA;{message} {dictionary({newline}{key} - {value})}&#xA;" name="Text Formatter" />
+    </formatters>
+    <logFilters>
+      <add type="Microsoft.Practices.EnterpriseLibrary.Logging.Filters.CategoryFilter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" categoryFilterMode="AllowAllExceptDenied" name="Category Filter" />
+      <add type="Microsoft.Practices.EnterpriseLibrary.Logging.Filters.PriorityFilter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" maximumPriority="50" name="Priority Filter" />
+    </logFilters>
+    <categorySources>
+      <add switchValue="All" name="General">
+        <listeners>
+          <add name="Email Trace Listener" />
+          <add name="Event Log Listener" />
+          <add name="Rolling Flat File Trace Listener" />
+        </listeners>
+      </add>
+    </categorySources>
+    <specialSources>
+      <allEvents switchValue="All" name="All Events">
+        <listeners>
+          <add name="Rolling Flat File Trace Listener" />
+          <add name="Event Log Listener" />
+          <add name="Email Trace Listener" />
+        </listeners>
+      </allEvents>
+      <notProcessed switchValue="All" name="Unprocessed Category">
+        <listeners>
+          <add name="Rolling Flat File Trace Listener" />
+          <add name="Event Log Listener" />
+          <add name="Email Trace Listener" />
+        </listeners>
+      </notProcessed>
+      <errors switchValue="All" name="Logging Errors &amp; Warnings">
+        <listeners>
+          <add name="Rolling Flat File Trace Listener" />
+          <add name="Event Log Listener" />
+          <add name="Email Trace Listener" />
+        </listeners>
+      </errors>
+    </specialSources>
+  </loggingConfiguration>
 </configuration>
